--- a/learn/library.html
+++ b/learn/library.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div style="max-width:480px;margin:60px auto;padding:36px 28px 32px 28px;background:#f9fafb;border-radius:22px;box-shadow:0 2px 16px rgba(37,99,235,0.08);display:flex;flex-direction:column;align-items:center;">
-    <img src="https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=400&q=80" alt="Library" style="width:100%;max-width:340px;height:200px;object-fit:cover;border-radius:16px;margin-bottom:28px;box-shadow:0 1px 8px rgba(37,99,235,0.04);" />
+  <img src="../images/libraryb7.png" alt="Library" style="width:100%;max-width:340px;height:200px;object-fit:cover;border-radius:16px;margin-bottom:28px;box-shadow:0 1px 8px rgba(37,99,235,0.04);" />
     <h1 style="color:#38b2ac;font-size:1.7rem;font-weight:700;margin-bottom:16px;text-align:center;">Library</h1>
     <p style="font-size:1.08rem;color:#444;margin-bottom:22px;text-align:center;line-height:1.6;">Visit the campus library to read, study, or borrow books and resources for personal and professional growth.</p>
     <span style="display:inline-block;background:#e6f7ee;color:#38b2ac;font-weight:500;padding:6px 14px;border-radius:14px;font-size:1rem;margin-bottom:18px;width:fit-content;min-width:0;">Building 7, Floor 2</span>
