--- a/main.html
+++ b/main.html
@@ -72,7 +72,7 @@
     <div id="card-container" class="card-container" style="display:none;">
       <!-- Music -->
       <a href="music/karaoke.html" class="category-card" data-category="music">
-        <img src="https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?auto=format&fit=crop&w=400&q=80" alt="Karaoke Lounge" class="card-img" />
+  <img src="images/karaokeb4.png" alt="Karaoke Lounge" class="card-img" />
         <div class="card-content">
           <h3 class="card-title">Karaoke Lounge</h3>
           <p class="card-desc">Sing your heart out in our dedicated karaoke lounge, equipped with the latest sound system and a wide selection of songs.</p>
@@ -80,7 +80,7 @@
         </div>
       </a>
         <a href="games/xbox.html" class="category-card" data-category="games">
-          <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420?auto=format&fit=crop&w=400&q=80" alt="XBox Lounge" class="card-img" />
+  <img src="images/xboxloungeb4.png" alt="XBox Lounge" class="card-img" />
           <div class="card-content">
             <h3 class="card-title">XBox Lounge</h3>
             <p class="card-desc">Relax and play the latest games in our XBox Lounge, equipped with comfy seating and a big screen.</p>
@@ -89,7 +89,7 @@
         </a>
       <!-- Coffee & Snacks -->
         <a href="coffee/breville.html" class="category-card" data-category="coffee">
-          <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=400&q=80" alt="Breville Coffee Machine" class="card-img" />
+          <img src="images/brevilleb4.png" alt="Breville Coffee Machine" class="card-img" />
           <div class="card-content">
             <h3 class="card-title">Breville Coffee Machine</h3>
             <p class="card-desc">Enjoy premium coffee from our new Breville machine, available for all employees in the lounge.</p>
@@ -98,7 +98,7 @@
         </a>
       <!-- Wellness -->
           <a href="wellness/naproom.html" class="category-card" data-category="wellness">
-            <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Nap Room" class="card-img" />
+            <img src="images/naproomb16.png" alt="Nap Room" class="card-img" />
             <div class="card-content">
               <h3 class="card-title">Nap Room</h3>
               <p class="card-desc">Recharge in our quiet nap room, designed for short breaks and relaxation during your workday.</p>
@@ -108,16 +108,16 @@
       </a>
       <!-- Movement -->
       <a href="movement/soccer.html" class="category-card" data-category="movement">
-        <img src="https://images.unsplash.com/photo-1508780709619-79562169bc64?auto=format&fit=crop&w=400&q=80" alt="Soccer Field" class="card-img" />
+        <img src="images/minigolfb7.png" alt="Mini Golf" class="card-img" />
         <div class="card-content">
-          <h3 class="card-title">Soccer Field</h3>
-          <p class="card-desc">Join a pickup game or practice your skills at the campus soccer field, open to all employees.</p>
-          <span style="display:inline-block;background:#e6f7ee;color:#38b2ac;font-weight:500;padding:6px 14px;border-radius:14px;font-size:1rem;margin-bottom:8px;width:fit-content;min-width:0;">Commons</span>
+          <h3 class="card-title">Mini Golf</h3>
+          <p class="card-desc">Play a round of mini golf on campus! Challenge friends or enjoy a relaxing break with a putter and colorful obstacles.</p>
+          <span style="display:inline-block;background:#e6f7ee;color:#38b2ac;font-weight:500;padding:6px 14px;border-radius:14px;font-size:1rem;margin-bottom:8px;width:fit-content;min-width:0;">Building 7</span>
         </div>
       </a>
       <!-- Learn Something -->
       <a href="learn/library.html" class="category-card" data-category="learn">
-        <img src="https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=400&q=80" alt="Library" class="card-img" />
+  <img src="images/libraryb7.png" alt="Library" class="card-img" />
         <div class="card-content">
           <h3 class="card-title">Library</h3>
           <p class="card-desc">Visit the campus library to read, study, or borrow books and resources for personal and professional growth.</p>
@@ -126,7 +126,7 @@
       </a>
       <!-- Explore Campus -->
       <a href="explore/speakeasy.html" class="category-card" data-category="explore">
-        <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?auto=format&fit=crop&w=400&q=80" alt="Speakeasy / Secret Room" class="card-img" />
+  <img src="images/speakeasyb40.png" alt="Speakeasy / Secret Room" class="card-img" />
         <div class="card-content">
           <h3 class="card-title">Speakeasy / Secret Room</h3>
           <p class="card-desc">Discover the hidden speakeasy on campus—a secret room for quiet meetings, creative sessions, or just a fun surprise.</p>
