--- a/music/karaoke.html
+++ b/music/karaoke.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div style="max-width:480px;margin:60px auto;padding:36px 28px 32px 28px;background:#f9fafb;border-radius:22px;box-shadow:0 2px 16px rgba(37,99,235,0.08);display:flex;flex-direction:column;align-items:center;">
-    <img src="https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?auto=format&fit=crop&w=400&q=80" alt="Karaoke Lounge" style="width:100%;max-width:340px;height:200px;object-fit:cover;border-radius:16px;margin-bottom:28px;box-shadow:0 1px 8px rgba(37,99,235,0.04);" />
+  <img src="../images/karaokeb4.png" alt="Karaoke Lounge" style="width:100%;max-width:340px;height:200px;object-fit:cover;border-radius:16px;margin-bottom:28px;box-shadow:0 1px 8px rgba(37,99,235,0.04);" />
     <h1 style="color:#38b2ac;font-size:1.7rem;font-weight:700;margin-bottom:16px;text-align:center;">Karaoke Lounge</h1>
     <p style="font-size:1.08rem;color:#444;margin-bottom:22px;text-align:center;line-height:1.6;">Sing your heart out in our dedicated karaoke lounge, equipped with the latest sound system and a wide selection of songs.</p>
     <span style="display:inline-block;background:#e6f7ee;color:#38b2ac;font-weight:500;padding:6px 14px;border-radius:14px;font-size:1rem;margin-bottom:18px;width:fit-content;min-width:0;">Building 5, Floor 4</span>
