added more images/spaces

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="landing-body">
   <div class="container">
   <h1 class="headline">The best part of your day might be <span style="color:#38b2ac;font-weight:bold;">In&nbsp;Between</span>.</h1>
-    <p class="subtext">Explore hidden rooms, try new coffee machines, jam in music spaces, or take a walk to a cabin conference room. The Redmond Campus is full of surprises—discover them.</p>
+  <p class="subtext">Explore hidden rooms, try new coffee machines, jam in music spaces, or take a walk to fun meeting space.<br>The Redmond Campus is full of surprises—discover them.</p>
   <a href="main.html" class="launch-btn" style="font-weight:bold; text-decoration:none;">🚀 Launch In&nbsp;Between →</a>
   </div>
 </body>
