added card for b92 basketball court

--- a/main.html
+++ b/main.html
@@ -131,9 +131,17 @@
         <div class="card-content">
           <h3 class="card-title">Mini Golf</h3>
           <p class="card-desc">Play a round of mini golf on campus! Challenge friends or enjoy a relaxing break with a putter and colorful obstacles.</p>
-          <span style="display:inline-block;background:#e6f7ee;color:#38b2ac;font-weight:500;padding:6px 14px;border-radius:14px;font-size:1rem;margin-bottom:8px;width:fit-content;min-width:0;">Building 7</span>
+          <span style="display:inline-block;background:#e6f7ee;color:#38b2ac;font-weight:500;padding:6px 14px;border-radius:14px;font-size:1rem;margin-bottom:8px;width:fit-content;min-width:0;">Building 7, Floor 2</span>
         </div>
       </a>
+        <a href="movement/basketball.html" class="category-card" data-category="movement">
+          <img src="images/basketballb92.jpg" alt="Basketball Court" class="card-img" />
+          <div class="card-content">
+            <h3 class="card-title">Basketball Court</h3>
+            <p class="card-desc">Shoot hoops and play basketball with friends. The court is open for casual games and team matches.</p>
+            <span style="display:inline-block;background:#e6f7ee;color:#38b2ac;font-weight:500;padding:6px 14px;border-radius:14px;font-size:1rem;margin-bottom:8px;width:fit-content;min-width:0;">Building 92, Floor 1</span>
+          </div>
+        </a>
       <!-- Learn Something -->
       <a href="learn/library.html" class="category-card" data-category="learn">
   <img src="images/libraryb7.png" alt="Library" class="card-img" />
