--- a/explore/speakeasy.html
+++ b/explore/speakeasy.html
@@ -10,7 +10,7 @@
     <h1 style="color:#38b2ac;font-size:1.7rem;font-weight:700;margin-bottom:16px;text-align:center;">Speakeasy / Secret Room</h1>
     <p style="font-size:1.08rem;color:#444;margin-bottom:22px;text-align:center;line-height:1.6;">Discover the hidden speakeasy on campus—a secret room for quiet meetings, creative sessions, or just a fun surprise.</p>
     <span style="display:inline-block;background:#e6f7ee;color:#38b2ac;font-weight:500;padding:6px 14px;border-radius:14px;font-size:1rem;margin-bottom:18px;width:fit-content;min-width:0;">Building 40, Floor 3</span>
-    <a href="../main.html" style="color:#38b2ac;font-weight:600;text-decoration:none;font-size:1.05rem;margin-top:8px;">← Back to categories</a>
+  <a href="../main.html" style="color:#38b2ac;font-weight:600;text-decoration:none;font-size:1.05rem;margin-top:8px;">← Back to Main</a>
   </div>
 </body>
 </html>
