--- a/learn/read-article.html
+++ b/learn/read-article.html
@@ -11,7 +11,7 @@
     <h1 style="color:#2563eb;font-size:2rem;margin-bottom:18px;">Read an Article</h1>
     <img src="https://images.unsplash.com/photo-1465101178521-c1a9136a3c8b?auto=format&fit=crop&w=600&q=80" alt="Learning Space" style="width:100%;border-radius:18px;margin-bottom:24px;" />
     <p style="font-size:1.1rem;color:#444;margin-bottom:18px;">Catch up on a short article or TED talk in the learning lounge. Perfect for &lt;30 mins breaks.</p>
-    <a href="../main.html" style="color:#2563eb;font-weight:bold;text-decoration:none;">← Back to categories</a>
+  <a href="../main.html" style="color:#38b2ac;font-weight:600;text-decoration:none;font-size:1.05rem;margin-top:8px;">← Back to Main</a>
   </div>
 </body>
 </html>
