--- a/coffee/breville.html
+++ b/coffee/breville.html
@@ -10,7 +10,7 @@
     <h1 style="color:#38b2ac;font-size:1.7rem;font-weight:700;margin-bottom:16px;text-align:center;">Breville Coffee Machine</h1>
     <p style="font-size:1.08rem;color:#444;margin-bottom:22px;text-align:center;line-height:1.6;">Enjoy premium coffee from our new Breville machine, available for all employees in the lounge.</p>
     <span style="display:inline-block;background:#e6f7ee;color:#38b2ac;font-weight:500;padding:6px 14px;border-radius:14px;font-size:1rem;margin-bottom:18px;width:fit-content;min-width:0;">Building 5, Floor 4</span>
-    <a href="../main.html" style="color:#38b2ac;font-weight:600;text-decoration:none;font-size:1.05rem;margin-top:8px;">← Back to categories</a>
+  <a href="../main.html" style="color:#38b2ac;font-weight:600;text-decoration:none;font-size:1.05rem;margin-top:8px;">← Back to Main</a>
   </div>
 </body>
 </html>
