--- a/main.html
+++ b/main.html
@@ -25,6 +25,28 @@
     document.querySelectorAll('.building-checkbox, #building-all, .category-checkbox, #category-all').forEach(cb => {
       cb.addEventListener('change', updateFilters);
     });
+
+    // Show activity card if activity param is present
+    const params = new URLSearchParams(window.location.search);
+    const activity = params.get('activity');
+    if (activity) {
+      const cardContainer = document.getElementById('card-container');
+      cardContainer.style.display = 'flex';
+      const allCards = document.querySelectorAll('.category-card');
+      let found = false;
+      allCards.forEach(function(card) {
+        if (card.getAttribute('href').toLowerCase() === activity.toLowerCase()) {
+          card.style.display = 'flex';
+          card.scrollIntoView({ behavior: 'smooth', block: 'center' });
+          found = true;
+        } else {
+          card.style.display = 'none';
+        }
+      });
+      if (!found) {
+        cardContainer.insertAdjacentHTML('beforeend', `<div style="color:#e53e3e;font-weight:500;margin:24px auto;">No matching activity found.</div>`);
+      }
+    }
     // ...existing code...
   });
   // Show cards when any category is clicked
@@ -80,6 +102,7 @@
 <body>
   <div class="main-layout">
     <aside class="sidebar">
+  <a href="quiz.html" class="sidebar-quiz-btn">Take the activity quiz 📝</a>
       <h2>Categories</h2>
         <ul class="category-list">
           <li>📋 All</li>
@@ -93,6 +116,38 @@
           <li>🌳 Meeting Spaces</li>
         </ul>
     </aside>
+<style>
+  .sidebar-quiz-btn {
+    display: block;
+    margin-bottom: 18px;
+    margin-top: 8px;
+    padding: 7px 14px;
+    border: 1.5px solid #e0e7ef;
+    border-radius: 12px;
+    background: #fff;
+  color: #111;
+    font-size: 0.98rem;
+    font-weight: 500;
+    text-decoration: none;
+    box-shadow: 0 1px 6px rgba(56,178,172,0.08);
+    width: 90%;
+    max-width: 180px;
+    text-align: center;
+    transition: background 0.18s, box-shadow 0.18s, transform 0.12s;
+    position: relative;
+    overflow: hidden;
+  }
+  .sidebar-quiz-btn:hover {
+    background: #f8fafc;
+    box-shadow: 0 2px 12px rgba(37,99,235,0.10);
+    cursor: pointer;
+  }
+  .sidebar-quiz-btn:active {
+    background: #e0e7ef;
+    box-shadow: 0 1px 4px rgba(37,99,235,0.10);
+    transform: scale(0.97);
+  }
+</style>
     <main class="main-content">
   <h1>Discover what’s possible in <span style="color:#38b2ac;font-weight:bold;">In&nbsp;Between</span> work</h1>
   <!-- Filters removed as requested -->
