--- a/music/musicroom.html
+++ b/music/musicroom.html
@@ -12,7 +12,7 @@
     <h1 style="color:#38b2ac;font-size:1.7rem;font-weight:700;margin-bottom:16px;text-align:center;">Music Room</h1>
     <p style="font-size:1.08rem;color:#444;margin-bottom:22px;text-align:center;line-height:1.6;">Practice, jam, or record in our soundproof music room, available for all employees to book and use.</p>
     <span style="display:inline-block;background:#e6f7ee;color:#38b2ac;font-weight:500;padding:6px 14px;border-radius:14px;font-size:1rem;margin-bottom:18px;width:fit-content;min-width:0;">Building 3, Floor 1</span>
-    <a href="../main.html" style="color:#38b2ac;font-weight:600;text-decoration:none;font-size:1.05rem;margin-top:8px;">← Back to categories</a>
+  <a href="../main.html" style="color:#38b2ac;font-weight:600;text-decoration:none;font-size:1.05rem;margin-top:8px;">← Back to Main</a>
   </div>
 </body>
 </html>
