--- a/quiz.html
+++ b/quiz.html
@@ -32,12 +32,27 @@
     <form id="quiz-form">
       <div id="step-0" class="quiz-step">
         <div class="quiz-options">
-          <label><input type="checkbox" name="area" value="East Campus"> East Campus</label>
-          <label><input type="checkbox" name="area" value="West Campus"> West Campus</label>
-          <label><input type="checkbox" name="area" value="North Campus"> North Campus</label>
-          <label><input type="checkbox" name="area" value="RedWest Campus"> RedWest Campus</label>
+          <label>
+            <input type="checkbox" name="area" value="East Campus">
+            East Campus
+          </label>
+          <label>
+            <input type="checkbox" name="area" value="West Campus">
+            West Campus
+          </label>
+          <label>
+            <input type="checkbox" name="area" value="North Campus">
+            North Campus
+          </label>
+          <label>
+            <input type="checkbox" name="area" value="RedWest Campus">
+            RedWest Campus
+          </label>
           <div style="height:16px;"></div>
-          <label><input type="checkbox" name="area" value="Any Campus"> Any Campus</label>
+          <label>
+            <input type="checkbox" name="area" value="Any Campus">
+            Any Campus
+          </label>
         </div>
         <button type="button" class="quiz-btn" id="next-0">Next →</button>
       </div>
